--- a/public/style.css
+++ b/public/style.css
@@ -15,7 +15,7 @@ body > div:last-child{
 }
 
 #wealth-dunk-navbar > .navbar-white > .container{
-	width: 65%;
+	width: 80%;
 	padding-top: 10px;
 }
 
@@ -34,7 +34,7 @@ body > div:last-child{
 #wealth-dunk-navbar ul > li > a{
 	text-transform: uppercase;
 	font-size: 17px;
-    padding: 10px 5px;
+	padding: 10px 5px;
 }
 
 #wealth-dunk-navbar ul > li > a:hover,
@@ -64,7 +64,7 @@ body > div:last-child{
 }
 
 .form-container.container {
-	width: 77%;
+	width: 82%;
 }
 
 .annual-fee-box{
@@ -73,8 +73,8 @@ body > div:last-child{
 	border-top-right-radius: 10px;
 	border-top-left-radius: 10px; 
 	border-bottom: none;
-    margin-left: 14.9%;
-    width: 60.1%;
+    margin-left: 13.8%;
+    width: 57.4%;
 }
 
 .annual-fee-box > p{
@@ -85,7 +85,7 @@ body > div:last-child{
 }
 
 .table-container.container{
-	width:77.1%;
+	width:83%;
 	margin-bottom: 100px;
 }
 
@@ -93,7 +93,7 @@ body > div:last-child{
 	min-height: 50px;
 	background-color: #13C996;
 	border-top-left-radius: 12px;
-	width:15%;
+	width:14.2%;
 	border:1px solid #C9BDC4;
 	padding: 20px 20px 0px;
 	border-bottom: 2px solid #6F8DA0;
@@ -123,7 +123,7 @@ body > div:last-child{
 }
 
 .table-container > div.row:nth-child(n+2){
-    height: 95px;
+    /*height: 95px;*/
     background: #F0F0F0;
     margin-bottom: 2px;
     padding-top: 12px;
@@ -135,28 +135,21 @@ body > div:last-child{
     border-top-right-radius: 10px;
 }
 
-.table-container > div.row:nth-child(n+2) > div{
-	width:15%;
+.table-container > div.row:nth-child(n+2) > div.accordion-heading > div{
+	width:14.2%;
 	text-align: center;
 	font-weight: bold;
 	color: #838383;
 	font-size: 13px;
 }
 
-/*.table-container > div.row:first-child > div:last-child{
-	width:10%;
-	background-color: #F1f1f1;
-	border:none;
-	border-radius: 0px;
-}*/
-
-.table-container > div.row:nth-child(n+2) > div:nth-child(n+2){
+.table-container > div.row:nth-child(n+2) > div.accordion-heading > div:nth-child(n+2){
 	font-size: 17px;
 	color: #646464;
 	padding-top: 8px;
 }
 
-.table-container > div.row:nth-child(n+2) > div:nth-child(n+2) > i{
+.table-container > div.row:nth-child(n+2) > div.accordion-heading > div:nth-child(n+2) i{
 	position: absolute;
     top: 0px;
     right: -15px;
@@ -165,7 +158,7 @@ body > div:last-child{
     color:#13C996;
 }
 
-.table-container > div.row:nth-child(n+2) > div:nth-child(n+2) > div{
+.table-container > div.row:nth-child(n+2) > div.accordion-heading > div:nth-child(n+2) > div{
 	padding-bottom: 5px; 
 }
 
@@ -227,6 +220,128 @@ footer .footer-bottom p{
 	margin-left: 10px;
 }
 
-./*table-container > div.row:nth-child(n+2) > div:nth-child(n+2):last-child{
-	padding-top: 20px;
-}*/
+.investor-calcutions > div.accordion-heading > div.col-md-1:nth-child(n+2){
+	padding-top: 0px !important;
+}
+
+.investor-calcutions > .accordion-body{
+	padding-top: 90px;
+}
+
+.investor-calcutions > .accordion-body .well{
+	margin-bottom: 0px;
+}
+
+.investor-calcutions > .accordion-body .additional-info h5{
+	font-weight: bold;
+	font-size: 16px;
+}
+
+.investor-calcutions > .accordion-body .additional-info ul{
+    padding: 0px 15px;
+    text-align: justify;
+}
+
+.investor-calcutions > .accordion-body .additional-info ul > li{
+	padding: 5px 0px;
+}
+
+.investor-calcutions > .accordion-body .additional-info ul.fee-bands{
+	list-style: none;
+	padding:0px;
+}
+
+.investor-calcutions > .accordion-body .additional-info ul.fee-bands > li{
+	font-weight: bold;
+}
+
+.investor-calcutions > .accordion-body .additional-info > div:last-child > div{
+	min-height: 240px;
+	background-color: #ffffff;
+	padding-right: 15px;
+	border-radius: 20px;
+	border: 1px solid #e6e6e6;
+	padding: 15px;
+}
+
+.btn-custom{
+    background-color: #13C996;
+    padding: 16px;
+    border-radius: 20px;
+    color: #ffffff;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.btn-zinc{
+	background-color: #13C996;
+	color: #ffffff;
+}
+
+.right-block{
+	font-size: 12px;
+	padding: 10px 0px;
+}
+
+.additional-info-features > div{
+	background: #ffffff;
+	min-height: 150px;
+	margin-left: 15px;
+	border-radius: 20px;
+	border: 1px solid #e6e6e6;
+}
+
+.additional-info-features > div > div > div{
+	padding: 10px 20px;
+
+}
+
+.additional-info-features > div > div > div:first:child{
+	border-right: 1px solid #e6e6e6;
+}
+
+ul.no-style{
+	list-style: none;
+	padding: 0px;
+}
+
+ul.no-style >li {
+	font-size: 12px;
+}
+
+.white-bg{
+	background-color: #fff !important;
+	color:#000;
+}
+
+.btn-close{
+	position: absolute;
+	padding: 10px;
+	color: #40973D;
+	right: 25px;
+}
+
+.btn-close > i{
+	background-color: #203f78;
+	border-radius: 40px;
+	font-size:16px !important;
+	padding: 5px;
+	margin-top: 10px;
+
+}
+
+.btn-close-design{
+    background: #f5f5f5;
+    height: 106px;
+    margin-top: -13px;
+    padding: 10px !important;
+    width: 14.8% !important;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+    border: 1px solid #e3e3e3;
+    border-bottom: none;
+}
+
+.semi_bold {
+	font-weight: 600;
+}
